--- a/basketball-stat-tracker/package.json
+++ b/basketball-stat-tracker/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-id-generator": "^3.0.1",
     "react-redux": "^7.2.2",
@@ -18,6 +19,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "uuidv4": "^6.2.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
