--- a/basketball-stat-tracker/package.json
+++ b/basketball-stat-tracker/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1",
     "uuidv4": "^6.2.5",
     "web-vitals": "^0.2.4"
   },
