--- a/basketball-stat-tracker/package.json
+++ b/basketball-stat-tracker/package.json
@@ -12,6 +12,7 @@
     "clsx": "^1.1.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-data-export": "^0.6.0",
     "react-dom": "^17.0.1",
     "react-id-generator": "^3.0.1",
     "react-redux": "^7.2.2",
@@ -21,7 +22,8 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "uuidv4": "^6.2.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
