--- a/basketball-stat-tracker/package.json
+++ b/basketball-stat-tracker/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "react-test-renderer": "^17.0.1"
